fix: block background stretch on all width

--- a/shelter/pages/pets/style.css
+++ b/shelter/pages/pets/style.css
@@ -85,8 +85,8 @@
 .content {
   flex-grow: 1;
   display: flex;
-  max-width: 1280px;
-  margin: 0 auto;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
   background: #f6f6f6;
 }
 /* PETS */
