--- a/shelter/template.css
+++ b/shelter/template.css
@@ -8,7 +8,7 @@ body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
-  background-color: #e5e5e5;
+  /* background-color: #e5e5e5; */
 }
 
 * {
